# WCMCommander

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.GitHub  CHANGELOG.txt  CMakeLists.txt  Contributors.txt  LICENSE  LICENSE.rtf  README.md  color-style.cpp  color-style.h  eloadsave.cpp  eloadsave.h  fileopers.cpp  filesearch.h  fontdlg.h  help.h  ltext.cpp  makefile  makefile.int  mfile.h  ncedit.cpp  nchistory.cpp  nchistory.h  ncview.cpp  ncview.h  ncwin.cpp  ncwin.h  operthread.h  panel.cpp  panel.h  readme_eng.txt  readme_utf8_ru.txt  search-tools.h  sftpdlg.h  shell-tools.h  shell.h  shl.h  shortcuts.cpp  (+20 more)
cmake/: FindSMBClient.cmake
debian/: README.Debian  README.source  changelog  control  copyright  deb-package.sh  manpage.sgml.ex  prerm.ex  rpmfix.sh  watch.ex  wcm-0.17.1.spec  wcm-0.19.0.spec  wcm.cron.d.ex  wcm.default.ex
docs/: freebsd-build.txt  mingw-build.txt
icons/: executable1.xpm  flag_red.xpm  folder3.xpm  monitor.xpm  question_balloon.xpm  stock_equals.xpm  workgroup.xpm
install-files/share/appdata/: wcm.appdata.xml
install-files/share/applications/: wcm.desktop
install-files/share/styles/: README
install-files/share/wcm/: config.default
install-files/share/wcm/lang/: help.ru  ltext.ru
install-files/share/wcm/shl/: c.shl  config.cfg  config.shl  cpp.shl  glsl.shl  java.shl  latex.shl  matlab.shl  pas.shl  perl.shl  php.shl  python.shl  ruby.shl  scala.shl  sh.shl  shl.shl  shlconfig.shl  shlconfig_v2.shl  sql.shl  undef.shl  xml.shl
install-files/share/wcm/styles/: Black.style  Default.style  README  README.solarized  Solarized-light.style  Solarized.style  Solarized.style.src  White.style  solarize.sh  solarized-gen.py
install-windows/: build_installer.bat  installer32.nsi  installer64.nsi
libssh2/: libssh2.lib  libssh2_debug.lib
libssh2/static32/: howto-build-these-libs.txt  libeay32.lib  libssh2.lib  libssh2.vcproj  ssleay32.lib  zlib.lib
setup-wcm/: setup-wcm.wixproj  setup-wcm.wxs
setup-wcm/gen_wix_comps/: comp_tpl.txt  gen_wix_comps.bat  gen_wix_comps.pl  gen_wix_comps_wcm.bat
src/: CMakeLists.txt  charsetdlg.cpp  charsetdlg.h  color-style.cpp  color-style.h  dialog_enums.h  dialog_helpers.h  dircalc.cpp  dircalc.h  dlg-ctrl-l.cpp  dlg-ctrl-l.h  drive-dlg.cpp  drive-dlg.h  eloadsave.cpp  eloadsave.h  ext-app-ux.cpp  ext-app-win.cpp  ext-app.cpp  ext-app.h  file-exec.cpp  file-exec.h  file-util.cpp  file-util.h  fileassociations.cpp  fileassociations.h  fileattributes.cpp  fileattributes.h  filehighlighting.cpp  filehighlighting.h  fileopers.cpp  fileopers.h  filesearch.cpp  filesearch.h  folder-history.cpp  folder-history.h  folder-shortcuts.cpp  folder-shortcuts.h  fontdlg.cpp  fontdlg.h  ftplogon.cpp  (+104 more)
src/System/: Platform.h  Types.h
src/debian/: changelog  copyright  postinst.ex
src/icons/: find.xpm  folder.xpm  hourglass.xpm  link.xpm  ok2.xpm  panel_open_close.xpm  redo.xpm  reload.xpm  replace.xpm  undo.xpm  wcm.xpm  wcmroot.xpm
src/libtester/: libsmb40_test.cpp
src/plugin/: plugin-archive.cpp  plugin-archive.h  plugin.cpp  plugin.h
src/swl/: swl.h  swl_button.cpp  swl_combobox.cpp  swl_editline.cpp  swl_internal.h  swl_layout.cpp  swl_layout.h  swl_menubox.cpp  swl_menutextinfo.cpp  swl_popupmenu.cpp  swl_sbutton.cpp  swl_scrollbar.cpp  swl_staticlabel.cpp  swl_textlist.cpp  swl_vlist.cpp  swl_winbase.cpp  swl_winbase.h  swl_wincore.cpp  swl_wincore.h  swl_wincoreMS.cpp  swl_wincoreUX.cpp  swl_wincore_freetype_inc.h  swl_wincore_internal.h
src/vfs/: vfs-ftp.cpp  vfs-ftp.h  vfs-sftp.cpp  vfs-sftp.h  vfs-sftp2.cpp  vfs-smb.cpp  vfs-smb.h  vfs-tmp.cpp  vfs-tmp.h  vfs-uri.cpp  vfs-uri.h  vfs.cpp  vfs.h  vfspath.cpp  vfspath.h
src/wal/: types.h  wal.cpp  wal.h  wal_charset.cpp  wal_exceptions.cpp  wal_files.cpp  wal_sys_api.cpp  wal_sys_api.h  wal_tmpls.cpp  wal_tmpls.h
swl/: swl_button.cpp  swl_internal.h  swl_layout.cpp  swl_menubox.cpp  swl_popupmenu.cpp  swl_winbase.cpp  swl_winbase.h  swl_wincore.cpp  swl_wincore_internal.h
tools/: localize.py
wal/: wal_files.cpp  wal_tmpls.cpp
wcm/: CMakeLists.txt  Resource.h  bfile.h  charsetdlg.cpp  charsetdlg.h  color-style.cpp  color-style.h  dircalc.cpp  dircalc.h  dlg-ctrl-l.cpp  eloadsave.cpp  eloadsave.h  ext-app-ux.cpp  ext-app.cpp  ext-app.h  fileassociations.cpp  fileassociations.h  filehighlighting.cpp  filehighlighting.h  fileopers.cpp  fileopers.h  filesearch.cpp  filesearch.h  fontdlg.cpp  fontdlg.h  ftplogon.cpp  ftplogon.h  globals.cpp  globals.h  help.cpp  help.h  helpres.cpp  intarnal_icons.inc  libconf.h  libconf_osx.h  libconf_ux.h  libconf_win32.h  ltext.cpp  ltext.h  makefile  (+92 more)
wcm/cmake/: FindSSH2.cmake
wcm/debian/: README.source  changelog  control  deb-package.sh  init.d.ex  manpage.1.ex  manpage.xml.ex  menu.ex  postrm.ex  preinst.ex  rules  wcm.doc-base.EX
wcm/icons/: home.xpm  run.xpm
wcm/install-files/share/applications/: wcm.desktop
wcm/install-files/share/wcm/: config.default
wcm/install-files/share/wcm/lang/: help.ru  list  ltext.ru
wcm/install-files/share/wcm/shl/: shl.shl  shlconfig.shl  shlconfig_v2.shl
wcm/install-windows/: build_installer.bat  installer.nsi  installer32.nsi  installer64.nsi
wcm/libtester/: libconf.create  libfreetype_test.cpp  libsmb40_test.cpp  libsmb_test.cpp  libssh2_test.cpp
wcm/swl/: swl.h  swl_button.cpp  swl_editline.cpp  swl_internal.h  swl_layout.cpp  swl_layout.h  swl_menubox.cpp  swl_menutextinfo.cpp  swl_popupmenu.cpp  swl_sbutton.cpp  swl_scrollbar.cpp  swl_staticlabel.cpp  swl_textlist.cpp  swl_vlist.cpp  swl_winbase.cpp  swl_winbase.h  swl_wincore.cpp  swl_wincore.h  swl_wincoreMS.cpp  swl_wincoreUX.cpp  swl_wincore_freetype_inc.h  swl_wincore_internal.h  swl_wincore_ui_inc.h
wcm/wal/: IntrusivePtr.h  iIntrusivePtr.cpp  iintrusiveptr.h  types.h  wal.cpp  wal.h  wal_charset.cpp  wal_exceptions.cpp  wal_files.cpp  wal_sys_api.cpp  wal_sys_api.h  wal_tmpls.cpp  wal_tmpls.h
